security: Update atproto to 0.0.63 and cryptography to 45.0.7
- Resolves Dependabot alert #6 (medium severity - CVE in OpenSSL <43.0.1)
- Resolves Dependabot alert #7 (low severity - CVE-2024-12797 in OpenSSL <44.0.1)
- Updated atproto from 0.0.54 to 0.0.63 to allow cryptography update
- Updated cryptography from 42.0.8 to 45.0.7 (latest secure version)
- Also updated libipld 2.0.0 -> 3.2.0 and websockets 13.1 -> 15.0.1

--- a/bluesky/pyproject.toml
+++ b/bluesky/pyproject.toml
@@ -12,7 +12,7 @@ bluesky-producer-data = {path = "bluesky_producer/bluesky-producer_data", develo
 bluesky-producer-kafka-producer = {path = "bluesky_producer/bluesky-producer_kafka_producer", develop = true}
 confluent-kafka = ">=2.5.3"
 cloudevents = ">=1.11.0"
-atproto = "0.0.54"
+atproto = ">=0.0.63"
 aiohttp = ">=3.10.5"
 asyncio = ">=3.4.3"
 dataclasses-json = ">=0.6.7"
